--- a/DigiApp/templates/base.html
+++ b/DigiApp/templates/base.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="es">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documentos</title>
+    {% load static %}
+    
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
 </head>
 
 <body>
@@ -15,7 +21,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="{% static 'img/logo-proaes.svg' %}" alt="Logo" width="100" class="d-inline-block align-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,11 +49,11 @@
                     <li class="nav-item dropdown">
                         <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             {{ user.username }}
-                            <img class="img-profile rounded-circle" src="#">
+                            <img class="img-profile rounded-circle" src="{% static 'img/profile_pic.jpg' %}"  width="25" height="25">
                         </button>
                     
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Perfil</a></li>
+                            <!-- <li><a class="dropdown-item" href="#">Perfil</a></li> -->
                             <div class="dropdown-divider"></div>
                             <li><a class="dropdown-item" aria-current="page" href="{% url 'logout' %}">Cerrar sesión</a></li>
                         </ul>
@@ -78,11 +86,11 @@
     {% endif %}
 
 
-
+    <div class="mt-3 mb-5">
     {% block content %}
     
     {% endblock %}
-
+    </div>
 </body>
 
 </html>
