--- a/DigiApp/templates/editar_documento.html
+++ b/DigiApp/templates/editar_documento.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container-fluid">
-    <div class="card shadow mb-4 p-2">
+    <div class="card shadow mb-4 p-2 mx-auto" style="width: 90%;">
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">Editar archivo</h6>
         </div>
