--- a/DigiApp/templates/registration/login.html
+++ b/DigiApp/templates/registration/login.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container-fluid">
-    <div class="card shadow mb-4 p-2">
+    <div class="card shadow mb-4 p-2 mx-auto" style="min-width: 350px; width: 40%;">
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">Iniciar sesión</h6>
         </div>
